| Author: Jonathan Naumann                                               |
+------------------------------------------------------------------------+
|
| CHANGELOG
|
+



############################################################################################





Version 2.0
	- Version 2.0.0

Developer Version
	- 1.9.0 Development
	- 1.9.9 Beta 1
	- 1.9.9 Beta 2
	- 2.0.0 Stable

Building Steps: 5023



 Version 2.0.1 Stable
-----------------------------------------------------------------

 - bug #0000xxx: 

 - security fixed: 

 - bug fixed: Newsmanager "doParsePHP" bug fixed.
 - bug fixed: Newsmanager load news bug fixed.
 - bug fixed: 

 - changed: 

 - added: Countrylist completed and added to the contact manager.
 - added: 




 Version 2.0.0
-----------------------------------------------------------------

 - bug #0000xxx: 

 - security fixed: 

 - bug fixed: The DateTime button for the downloads in the download manager in the
              backend opens now a timecontrol for all downloads.
 - bug fixed: Fixed many bugs on the MediaManager.
 - bug fixed: Fixed the PDF generator.
 - bug fixed: Sitetitle and Pathway bug on the Sitemap fixed.
 - bug fixed: Sitemap now also generated on the XML database.
 - bug fixed: Sitemenu creation bug fixed.
 - bug fixed: Poll has a bug using it with the XML database.
 - bug fixed: 

 - changed: DataContainer Classes changed to the correct PHP5-Class-Design.
 - changed: Deleted all PHP4 constuctors iun all classes.
 - changed: Massive cleanup of the source code, removed many deprecated functions,
            cleanup many PHP4 specific code.
 - changed: Better search page, replace the search functions into the search class.
 - changed: Guestbook config now as object and only loaded in the guestbook extension.
 - changed: Relocated all module configuration settings into the modules
 - changed: Enabled the tabPane for all extensions.
 - changed: Remoced the old configuration class "modconfig", replaced it with the