@@ -9,9 +9,9 @@
 	<status>Development</status>
 	<status>RC1</status>
 	
-	<build>Build 5023</build>
+	<build>Build 5025</build>
 	<name>toendaCMS</name>
 	<tagline>Your ideas ahead</tagline>
-	<release_date>10.07.2008 - 13:10</release_date>
+	<release_date>17.07.2008 - 10:36</release_date>
 	<toenda_copyright>2003 - 2008</toenda_copyright>
 </version>
